Play with openapi tags.
